fixed minor bug of buttons being misaligned on desktop.

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -55,7 +55,7 @@
       justify-content: center;
     }
 
-    & a {
+     & a {
       font-size: 2.4rem;
       margin: 1rem;
 
@@ -69,6 +69,11 @@
 @media(min-width:764px){
   .hero-cta{
     flex-direction: row !important;
+
+     a{
+      margin: 0 !important;
+      margin-right: 1rem !important;
+    }
   }
 }
 
